fixed project section height on mobile view

--- a/src/Components/RightContent/Navigation/Navigation.scss
+++ b/src/Components/RightContent/Navigation/Navigation.scss
@@ -5,7 +5,7 @@
     width: 100%;
     color: #33363b;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     padding: 30px;
     
